--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,10 +21,13 @@ android {
 
 dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.codesgood:justifiedtextview:1.1.0'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.uncopt:android.justified:1.0'
     implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.codesgood:justifiedtextview:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.navigation:navigation-fragment:2.2.0'
     implementation 'androidx.navigation:navigation-ui:2.2.0'
